병렬처리 구현중
jupyter notebook 환경에서 target function을 jupyter notebook에서 implement 했을 경우 Queue가 제대로 작동하지 않았다. multi process자체가 제대로 작동하지 않는것일수도 있음. 따로 *.py 파일을 만들어 function을 packaging 해야한다.

--- a/main.ipynb
+++ b/main.ipynb
@@ -696,7 +696,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Expand id2name"
+    "# Expand id2name\n",
+    "\n",
+    "OCR후 저장된 xlsx file(e.g. df.to_excel(output_name + '.xlsx', index=False))를 open합니다. name이 빠져있는 id를 체크하여 name을 채워넣습니다. 그 후 다음 코드를 실행하세요."
    ]
   },
   {
