--- a/Profile_PreProcessing.ipynb
+++ b/Profile_PreProcessing.ipynb
@@ -35,469 +35,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loaded id2name.xlsx as id2name\n",
       "Loaded id2name.xlsx as id2name\n"
      ]
     }
    ],
    "source": [
     "import OCRHelper as OH\n",
-    "import datetime"
+    "import datetime\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OCR normal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/133\n",
-      "2/133\n",
-      "3/133\n",
-      "4/133\n",
-      "5/133\n",
-      "6/133\n",
-      "7/133\n",
-      "8/133\n",
-      "9/133\n",
-      "10/133\n",
-      "11/133\n",
-      "12/133\n",
-      "13/133\n",
-      "14/133\n",
-      "15/133\n",
-      "16/133\n",
-      "17/133\n",
-      "18/133\n",
-      "19/133\n",
-      "20/133\n",
-      "21/133\n",
-      "22/133\n",
-      "23/133\n",
-      "24/133\n",
-      "25/133\n",
-      "26/133\n",
-      "27/133\n",
-      "28/133\n",
-      "29/133\n",
-      "30/133\n",
-      "31/133\n",
-      "32/133\n",
-      "33/133\n",
-      "34/133\n",
-      "35/133\n",
-      "36/133\n",
-      "37/133\n",
-      "38/133\n",
-      "39/133\n",
-      "40/133\n",
-      "41/133\n",
-      "42/133\n",
-      "43/133\n",
-      "44/133\n",
-      "45/133\n",
-      "46/133\n",
-      "47/133\n",
-      "48/133\n",
-      "49/133\n",
-      "50/133\n",
-      "51/133\n",
-      "52/133\n",
-      "53/133\n",
-      "54/133\n",
-      "55/133\n",
-      "56/133\n",
-      "57/133\n",
-      "58/133\n",
-      "59/133\n",
-      "60/133\n",
-      "61/133\n",
-      "62/133\n",
-      "63/133\n",
-      "64/133\n",
-      "65/133\n",
-      "66/133\n",
-      "67/133\n",
-      "68/133\n",
-      "69/133\n",
-      "70/133\n",
-      "71/133\n",
-      "72/133\n",
-      "73/133\n",
-      "74/133\n",
-      "75/133\n",
-      "76/133\n",
-      "77/133\n",
-      "78/133\n",
-      "79/133\n",
-      "80/133\n",
-      "81/133\n",
-      "82/133\n",
-      "83/133\n",
-      "84/133\n",
-      "85/133\n",
-      "86/133\n",
-      "87/133\n",
-      "88/133\n",
-      "89/133\n",
-      "90/133\n",
-      "91/133\n",
-      "92/133\n",
-      "93/133\n",
-      "94/133\n",
-      "95/133\n",
-      "96/133\n",
-      "97/133\n",
-      "98/133\n",
-      "99/133\n",
-      "100/133\n",
-      "101/133\n",
-      "102/133\n",
-      "103/133\n",
-      "104/133\n",
-      "105/133\n",
-      "106/133\n",
-      "107/133\n",
-      "108/133\n",
-      "109/133\n",
-      "110/133\n",
-      "111/133\n",
-      "112/133\n",
-      "113/133\n",
-      "114/133\n",
-      "115/133\n",
-      "116/133\n",
-      "117/133\n",
-      "118/133\n",
-      "119/133\n",
-      "120/133\n",
-      "121/133\n",
-      "122/133\n",
-      "123/133\n",
-      "124/133\n",
-      "125/133\n",
-      "126/133\n",
-      "127/133\n",
-      "128/133\n",
-      "129/133\n",
-      "130/133\n",
-      "131/133\n",
-      "132/133\n",
-      "133/133\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Players = OH.ocr_profiles()"
+    "profile_path = './Screenshots/'\n",
+    "profile_list = glob.glob(profile_path + '*.png')\n",
+    "Players = OH.ocr_profiles(profile_list = profile_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{32963004: 폭풍검,\n",
-       " 32864188: 찬사,\n",
-       " 36954744: 불곰,\n",
-       " 32930660: 폭풍을지,\n",
-       " 32928689: 외돌,\n",
-       " 32949515: 물돌,\n",
-       " 37061883: 태랑노군,\n",
-       " 33161683: 시미켄,\n",
-       " 32858679: 에이치피,\n",
-       " 32886907: 최Garen,\n",
-       " 32849136: 유니파더손,\n",
-       " 32916567: 민준하은,\n",
-       " 32888148: 정훈이,\n",
-       " 32860442: 돌팸환돌,\n",
-       " 44463382: 앤버는글럿,\n",
-       " 32881045: 화중군자,\n",
-       " 32934708: 6사염화9,\n",
-       " 34023817: 아야루,\n",
-       " 33691098: 으갹으갹갹,\n",
-       " 34174033: 알몬비,\n",
-       " 32910924: 인수성,\n",
-       " 32997413: DB베지터,\n",
-       " 32842266: Royal Toi,\n",
-       " 32951689: 문마마,\n",
-       " 34012835: 허세노비,\n",
-       " 32881241: 전차,\n",
-       " 32838380: Robin Since87,\n",
-       " 34068695: ccocco,\n",
-       " 35454450: 앱솔트,\n",
-       " 32819484: JSUB0313,\n",
-       " 32820259: 마리오1023,\n",
-       " 33334611: 명세지재,\n",
-       " 32878345: 무적금아,\n",
-       " 34352176: 폭풍헬퍼,\n",
-       " 34014496: 베이비,\n",
-       " 32900080: 뀰뀰,\n",
-       " 33898594: 고오니아빠,\n",
-       " 32904134: llii0993,\n",
-       " 33984315: TOYFLY,\n",
-       " 32947520: 알파카조앙,\n",
-       " 32878596: coreanito26,\n",
-       " 32873041: 꿈도없다,\n",
-       " 32858701: aquagu,\n",
-       " 34011747: Dondekman,\n",
-       " 32889863: 륭입니다,\n",
-       " 32850372: 킹갓권율,\n",
-       " 32852288: 설거지,\n",
-       " 33963794: 수라비,\n",
-       " 32870013: 섭리,\n",
-       " 34027799: 썁새끼,\n",
-       " 34344247: 운동하자,\n",
-       " 33995797: ALOHABIN,\n",
-       " 42322165: FTTS플라이하이,\n",
-       " 32921831: TGG밀크커피,\n",
-       " 32818701: kdc0627,\n",
-       " 32916643: 람겸,\n",
-       " 33264554: TOP신상25,\n",
-       " 32886302: 파괴본능,\n",
-       " 32866794: 소혼시후,\n",
-       " 32909658: 다혜나라,\n",
-       " 34015869: 독고구천검,\n",
-       " 32880341: 혀니비나,\n",
-       " 32850382: NO ABE,\n",
-       " 32871044: N2coni,\n",
-       " 35508783: 노호자,\n",
-       " 32889186: DP kakei,\n",
-       " 32937381: 큰연못,\n",
-       " 32865578: 뚠뚠월드,\n",
-       " 32908249: 아나머,\n",
-       " 32911721: 히니,\n",
-       " 37268288: 신승용1997,\n",
-       " 32824512: 젠트리,\n",
-       " 32937876: TOP랄랄랄라,\n",
-       " 32899091: jeehoney,\n",
-       " 32931677: 1812L,\n",
-       " 39715543: 신난스티치,\n",
-       " 32939826: 퀴리 마리,\n",
-       " 32921203: 기짝,\n",
-       " 34001747: 고투덩실,\n",
-       " 34035160: LordMohmmed,\n",
-       " 36892658: 욱그리거,\n",
-       " 32905501: HDST훈블리,\n",
-       " 35650857: 영양아구,\n",
-       " 32895911: castlejun,\n",
-       " 37796819: 붉은물결,\n",
-       " 34568871: 빅보스,\n",
-       " 32916321: DONMELCHOR,\n",
-       " 52207379: WestUK,\n",
-       " 53114051: 정동생,\n",
-       " 60143585: 국뽕탱이,\n",
-       " 32875812: Dalredal,\n",
-       " 63002044: 이천산적,\n",
-       " 32904825: 끄로바군주,\n",
-       " 32915466: 노래하는 허브,\n",
-       " 63270437: 김건빵2,\n",
-       " 64094946: 윤성뭉,\n",
-       " 49497280: DreamMart,\n",
-       " 69419248: 늠선생,\n",
-       " 69900353: 빈꼬끄,\n",
-       " 32914780: 방범대원,\n",
-       " 39738082: 수정,\n",
-       " 32944092: 유로,\n",
-       " 32877496: 꼬따발,\n",
-       " 34000149: 초록별공공,\n",
-       " 32931643: 폭풍JOKER,\n",
-       " 33003834: 노마,\n",
-       " 32869646: 꽃돌,\n",
-       " 32958563: 와이핀,\n",
-       " 36654814: 뉴비,\n",
-       " 32890539: 헌터,\n",
-       " 33154600: 악돌,\n",
-       " 32901235: 자한당멸망,\n",
-       " 42395617: 세그마,\n",
-       " 36466625: 오구라 유나,\n",
-       " 42546537: 키라라 아스카,\n",
-       " 42193164: 국제공항2,\n",
-       " 38066976: 바다검,\n",
-       " 42547043: 메구리,\n",
-       " 42482910: GERENT0T,\n",
-       " 55222825: 우헤아라 아이,\n",
-       " 68575684: 똥꼬가스랄여서오그리마,\n",
-       " 55223781: 하마사키 마오}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>name</th>\n",
-       "      <th>power</th>\n",
-       "      <th>kill</th>\n",
-       "      <th>path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>32963004</td>\n",
-       "      <td>폭풍검</td>\n",
-       "      <td>111024771</td>\n",
-       "      <td>61069693</td>\n",
-       "      <td>Screenshot_2020-07-21-02-59-36.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>32864188</td>\n",
-       "      <td>찬사</td>\n",
-       "      <td>51423715</td>\n",
-       "      <td>7112259</td>\n",
-       "      <td>Screenshot_2020-07-21-02-59-43.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>36954744</td>\n",
-       "      <td>불곰</td>\n",
-       "      <td>62497516</td>\n",
-       "      <td>11617124</td>\n",
-       "      <td>Screenshot_2020-07-21-02-59-48.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32930660</td>\n",
-       "      <td>폭풍을지</td>\n",
-       "      <td>50937003</td>\n",
-       "      <td>4202652</td>\n",
-       "      <td>Screenshot_2020-07-21-02-59-53.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>32928689</td>\n",
-       "      <td>외돌</td>\n",
-       "      <td>86041955</td>\n",
-       "      <td>115792742</td>\n",
-       "      <td>Screenshot_2020-07-21-02-59-58.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>42547043</td>\n",
-       "      <td>메구리</td>\n",
-       "      <td>1957670</td>\n",
-       "      <td>30845</td>\n",
-       "      <td>Screenshot_2020-07-21-03-40-57.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>42482910</td>\n",
-       "      <td>GERENT0T</td>\n",
-       "      <td>1022609</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Screenshot_2020-07-21-03-41-03.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>55222825</td>\n",
-       "      <td>우헤아라 아이</td>\n",
-       "      <td>849942</td>\n",
-       "      <td>332</td>\n",
-       "      <td>Screenshot_2020-07-21-03-41-09.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>68575684</td>\n",
-       "      <td>똥꼬가스랄여서오그리마</td>\n",
-       "      <td>416766</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Screenshot_2020-07-21-03-41-15.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>55223781</td>\n",
-       "      <td>하마사키 마오</td>\n",
-       "      <td>819326</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Screenshot_2020-07-21-03-41-21.png</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>122 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           ID         name      power       kill  \\\n",
-       "0    32963004          폭풍검  111024771   61069693   \n",
-       "1    32864188           찬사   51423715    7112259   \n",
-       "2    36954744           불곰   62497516   11617124   \n",
-       "3    32930660         폭풍을지   50937003    4202652   \n",
-       "4    32928689           외돌   86041955  115792742   \n",
-       "..        ...          ...        ...        ...   \n",
-       "117  42547043          메구리    1957670      30845   \n",
-       "118  42482910     GERENT0T    1022609          0   \n",
-       "119  55222825      우헤아라 아이     849942        332   \n",
-       "120  68575684  똥꼬가스랄여서오그리마     416766          0   \n",
-       "121  55223781      하마사키 마오     819326          0   \n",
-       "\n",
-       "                                   path  \n",
-       "0    Screenshot_2020-07-21-02-59-36.png  \n",
-       "1    Screenshot_2020-07-21-02-59-43.png  \n",
-       "2    Screenshot_2020-07-21-02-59-48.png  \n",
-       "3    Screenshot_2020-07-21-02-59-53.png  \n",
-       "4    Screenshot_2020-07-21-02-59-58.png  \n",
-       "..                                  ...  \n",
-       "117  Screenshot_2020-07-21-03-40-57.png  \n",
-       "118  Screenshot_2020-07-21-03-41-03.png  \n",
-       "119  Screenshot_2020-07-21-03-41-09.png  \n",
-       "120  Screenshot_2020-07-21-03-41-15.png  \n",
-       "121  Screenshot_2020-07-21-03-41-21.png  \n",
-       "\n",
-       "[122 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = OH.Players2df(Players)\n",
     "df"
@@ -512,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,12 +105,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_excel(output_name + '.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OCR detail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/14 : profile processing\n",
+      "2/14 : detail processing\n",
+      "3/14 : profile processing\n",
+      "4/14 : detail processing\n",
+      "5/14 : profile processing\n",
+      "6/14 : detail processing\n",
+      "7/14 : profile processing\n",
+      "8/14 : detail processing\n",
+      "9/14 : profile processing\n",
+      "10/14 : detail processing\n",
+      "11/14 : profile processing\n",
+      "12/14 : detail processing\n",
+      "13/14 : profile processing\n",
+      "14/14 : detail processing\n"
+     ]
+    }
+   ],
+   "source": [
+    "profile_path = './Screenshots/'\n",
+    "profile_list = glob.glob(profile_path + '*.png')\n",
+    "Players = OH.ocr_profiles_detail(profile_list = profile_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{32858679: 에이치피,\n",
+       " 32886907: 최Garen,\n",
+       " 32849136: 유니파더손,\n",
+       " 32916567: 민준하은,\n",
+       " 32888148: 정훈이,\n",
+       " 32860442: 돌팸환돌,\n",
+       " 44463382: 앤버는글럿}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : 에이치피\n",
+      "power : 39932235\n",
+      "kill : 1448263\n",
+      "kill_4T : 620523\n",
+      "kill_5T : 93634\n",
+      "death : 306878\n",
+      "gathering : 5988132681\n",
+      "assist : 482977082\n",
+      "\n",
+      "name : 최Garen\n",
+      "power : 39474214\n",
+      "kill : 2487123\n",
+      "kill_4T : 808557\n",
+      "kill_5T : 48472\n",
+      "death : 600447\n",
+      "gathering : 4307806687\n",
+      "assist : 16000000\n",
+      "\n",
+      "name : 유니파더손\n",
+      "power : 38618507\n",
+      "kill : 2323839\n",
+      "kill_4T : 788177\n",
+      "kill_5T : 125866\n",
+      "death : 196871\n",
+      "gathering : 5645510133\n",
+      "assist : 31056417\n",
+      "\n",
+      "name : 민준하은\n",
+      "power : 36930657\n",
+      "kill : 3422130\n",
+      "kill_4T : 1268810\n",
+      "kill_5T : 100256\n",
+      "death : 693065\n",
+      "gathering : 4826091895\n",
+      "assist : 474350080\n",
+      "\n",
+      "name : 정훈이\n",
+      "power : 33620190\n",
+      "kill : 5070346\n",
+      "kill_4T : 1328066\n",
+      "kill_5T : 17112\n",
+      "death : 633807\n",
+      "gathering : 4386581285\n",
+      "assist : 390647259\n",
+      "\n",
+      "name : 돌팸환돌\n",
+      "power : 26729638\n",
+      "kill : 3029242\n",
+      "kill_4T : 517211\n",
+      "kill_5T : 87200\n",
+      "death : 431688\n",
+      "gathering : 3019814894\n",
+      "assist : 387924055\n",
+      "\n",
+      "name : 앤버는글럿\n",
+      "power : 21030870\n",
+      "kill : 263443\n",
+      "kill_4T : 12588\n",
+      "kill_5T : -1\n",
+      "death : 20045\n",
+      "gathering : 3435170943\n",
+      "assist : 9270690\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ID, player in Players.items():\n",
+    "    print(player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
